fixed heights on parallax scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
 .single{
   height: 45vh;
   width: 45vh;
-  padding-top: 10vh;
+  margin-top: 10vh;
 }
 
 .singlepresent{
@@ -56,7 +56,7 @@
 .singletext{
   width: 56vw;
   z-index: 5;
-  top: 66%;
+  top: 70%;
   left: 38%;
 }
 
@@ -70,12 +70,12 @@
   z-index: 5;
   height: 5em;
 }
-/*
+
 #bootlock .meno{
   left: 0px;
   scrollbar-width: none;
 }
-*/
+
 
 /* secondo */
 .present{
@@ -150,12 +150,12 @@
 
 
 /* Quarto */
-/*
+
 .scrollo{
   scrollbar-width: none;
   scrollbar-color: yellow orange;
 }
-*/
+
 
 .caroselheight{
   height: 65vh;
